--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,7 +1,7 @@
 .menu {
   box-sizing: border-box;
   height: 100vh;
-  background-color: white;
+  background-color: $light-color;
   font-weight: 700;
   overflow: auto;
 
@@ -14,7 +14,6 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    background-color: #e5e5e5;
 
     @include onTablet {
       margin-bottom: 56px;
